# CW_Beta

./: .env  .flake8  .gitignore  config.py  pyproject.toml
data/: operations.json  operations.xls  user_settings.json
src/: log.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
