[tool.poetry]
name = "cw-beta"
version = "0.1.0"
description = ""
authors = ["Khan Evgeniy <evgeniy.igorevich9402@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datetime = "^5.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.3"
pytest = "^7.4.3"
freezegun = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
